# duckdb-mongo

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.agents/skills/: repro-issue.md  test.md
.github/workflows/: MainDistributionPipeline.yml  MongoDBTests.yml
benchmarks/: create-tpch-mongo.sh
docs/: IMPLEMENTATION.md  high-level-design.md
docs/llds/: after-cluster-time.md  driver-compat-layer.md  read-preference.md
docs/planning/: after-cluster-time-2026-05-20.md  driver-compat-2026-05-19.md  read-preference-2026-05-20.md
docs/specs/: after-cluster-time-specs.md  driver-compat-specs.md  read-preference-specs.md
src/: mongo_clear_cache.cpp  mongo_expr_pushdown.cpp  mongo_extension.cpp  mongo_filter_pushdown.cpp  mongo_optimizer.cpp  mongo_schema_inference.cpp  mongo_table_function.cpp
src/include/: mongo_compat.hpp  mongo_filter_pushdown.hpp  mongo_operation_state.hpp  mongo_table_function.hpp
test/: create-mongo-tables.sh
test/sql/attach/: catalog_operations.test
test/sql/cache/: clear_cache.test
test/sql/query/: after_cluster_time.test  objectid_filter.test  operation_time.test  read_preference.test
test/sql/schema/: case_variant_fields.test  schema.test
